--- a/k/argocd-bootstrap.yaml
+++ b/k/argocd-bootstrap.yaml
@@ -9667,6 +9667,10 @@ data:
   application.instanceLabelKey: argocd.argoproj.io/instance
   exec.enabled: "false"
   kustomize.buildOptions: --enable-helm
+  resource.customizations.health.networking.k8s.io_Ingress: |
+    hs = {}
+    hs.status = "Healthy"
+    return hs
   server.rbac.log.enforce.enable: "false"
   url: ""
 kind: ConfigMap
