--- a/Makefile.common
+++ b/Makefile.common
@@ -34,12 +34,12 @@ init-dev:
 	kubectl --context argocd rollout status deployment argocd-server --watch
 	kubectl --context argocd apply -f k/argocd-application.yaml
 	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
-	argocd --kube-context argocd app create traefik --repo https://github.com/defn/dev --path k/traefik --dest-namespace traefik --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
+	kubectl --context argocd apply -f k/traefik-application.yaml
 	argocd --kube-context argocd app create loft --repo https://github.com/defn/dev --path k/loft --dest-namespace loft --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	argocd --kube-context argocd app create vault --repo https://github.com/defn/dev --path k/vault --dest-namespace vault --dest-server https://kubernetes.default.svc --directory-recurse --validate=false
 	-$(MAKE) sync
-	$(MAKE) vault-restore
-	$(MAKE) vault-unseal
+	-$(MAKE) vault-restore
+	-$(MAKE) vault-unseal
 
 kubeconfig:
 	sudo cp /run/secrets/kubernetes.io/serviceaccount/ca.crt /usr/local/share/ca-certificates/
