vault listens on port 8200

--- a/k/traefik/kustomization.yaml
+++ b/k/traefik/kustomization.yaml
@@ -36,6 +36,7 @@ patchesStrategicMerge:
           - --providers.kubernetescrd
           - --providers.kubernetesingress
           - --entrypoints.websecure.address=:8443/tcp
+          - --entrypoints.https8200.address=:8820/tcp
           - --entrypoints.https600.address=:8600/tcp
           - --entrypoints.https601.address=:8601/tcp
           - --entrypoints.https602.address=:8602/tcp
@@ -55,6 +56,9 @@ patchesStrategicMerge:
           - --log.level=DEBUG
           - --accesslog=true
           ports:
+          - containerPort: 8820
+            name: https8200
+            protocol: TCP
           - containerPort: 8600
             name: https600
             protocol: TCP
@@ -102,6 +106,11 @@ patchesStrategicMerge:
           nodePort: 30080
         - name: websecure
           nodePort: 30443
+        - name: https8200
+          nodePort: 30820
+          port: 8200
+          protocol: TCP
+          targetPort: https8200
         - name: https600
           nodePort: 30600
           port: 600
