--- a/k/vc1-vault/cm.yaml
+++ b/k/vc1-vault/cm.yaml
@@ -22,7 +22,7 @@ data:
     }
 
     seal "transit" {
-      address = "http://10.43.234.71:8200"
+      address = "https://169.254.32.1:8200"
       token = "hvs.CAESIF-5cIJnj3fCYm-jp11WtXrXqCCBn7P2EKFD4-ahYa95Gh4KHGh2cy51dE9DdjZtam1kczBndlRuWk1HS1hhY1Y"
       disable_renewal = "false"
       key_name = "vc1-autounseal"
