--- a/k/vault-application.yaml
+++ b/k/vault-application.yaml
@@ -17,7 +17,7 @@ spec:
     - CreateNamespace=true
   ignoreDifferences:
   - kind: MutatingWebhookConfiguration
-    group: admissionregistration.k8s.io/v1
+    group: admissionregistration.k8s.io
     name: vault-agent-injector-cfg
     namespace: vault
     jqPathExpressions:
