--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,14 +3,14 @@ repos:
     rev: v4.2.0
     hooks:
       - id: trailing-whitespace
-        exclude: ^(provider|cdktf.out)/|\.lock
+        exclude: ^(provider|cdktf.out)/|\.lock|charts
       - id: end-of-file-fixer
-        exclude: ^(provider|cdktf.out)/|\.lock
+        exclude: ^(provider|cdktf.out)/|\.lock|charts
       - id: check-json
         exclude: ^(provider|cdktf.out)/
       - id: check-yaml
         args: [--allow-multiple-documents, --unsafe]
-        exclude: ^(provider|cdktf.out)/
+        exclude: ^(provider|cdktf.out)/|charts
       - id: check-toml
-        exclude: ^(provider|cdktf.out)/
+        exclude: ^(provider|cdktf.out)/|charts
       - id: check-shebang-scripts-are-executable
