--- a/Makefile.common
+++ b/Makefile.common
@@ -37,6 +37,7 @@ init-dev:
 	kubectl --context argocd apply -f k/traefik-application.yaml
 	kubectl --context argocd apply -f k/loft-application.yaml
 	kubectl --context argocd apply -f k/vault-application.yaml
+	kubectl --context argocd apply -f k/site-application.yaml
 	-$(MAKE) sync
 
 kubeconfig:
@@ -53,16 +54,18 @@ kubeconfig:
 
 sync:
 	argocd --kube-context argocd app sync argocd --local k/argocd --assumeYes --prune
-	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
-	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
-	argocd --kube-context argocd app sync vault --local k/vault --assumeYes --prune
 	argocd --kube-context argocd app wait argocd
+	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
 	argocd --kube-context argocd app wait traefik
+	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
 	argocd --kube-context argocd app wait loft
+	argocd --kube-context argocd app sync vault --local k/vault --assumeYes --prune
 	kubectl --context pod wait -n vault -l statefulset.kubernetes.io/pod-name=vault-0 --for=condition=ContainersReady pod
 	-$(MAKE) vault-restore
 	-$(MAKE) vault-unseal
 	argocd --kube-context argocd app wait vault
+	argocd --kube-context argocd app sync site --local k/site--assumeYes --prune
+	argocd --kube-context argocd app wait site
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
