run kuma global in k3s

--- a/Makefile.common
+++ b/Makefile.common
@@ -34,11 +34,29 @@ init-dev:
 	kubectl --context argocd rollout status deployment argocd-server --watch
 	kubectl --context argocd apply -f k/argocd-application.yaml
 	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
+	kubectl --context argocd apply -f k/kuma-application.yaml
 	kubectl --context argocd apply -f k/traefik-application.yaml
 	kubectl --context argocd apply -f k/loft-application.yaml
 	kubectl --context argocd apply -f k/vault-application.yaml
 	kubectl --context argocd apply -f k/site-application.yaml
 	-$(MAKE) sync
+
+sync:
+	argocd --kube-context argocd app sync argocd --local k/argocd --assumeYes --prune
+	argocd --kube-context argocd app wait argocd
+	argocd --kube-context argocd app sync kuma --local k/kuma --assumeYes --prune
+	argocd --kube-context argocd app wait kuma
+	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
+	argocd --kube-context argocd app wait traefik
+	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
+	argocd --kube-context argocd app wait loft
+	argocd --kube-context argocd app sync vault --local k/vault --assumeYes --prune
+	-kubectl --context pod wait -n vault -l statefulset.kubernetes.io/pod-name=vault-0 --for=condition=ContainersReady pod
+	-$(MAKE) vault-restore
+	-$(MAKE) vault-unseal
+	argocd --kube-context argocd app wait vault
+	argocd --kube-context argocd app sync site --local k/site --assumeYes --prune
+	argocd --kube-context argocd app wait site
 
 kubeconfig:
 	sudo cp /run/secrets/kubernetes.io/serviceaccount/ca.crt /usr/local/share/ca-certificates/
@@ -51,21 +69,6 @@ kubeconfig:
 	kubectl config set-credentials argocd --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
 	kubectl config set-context argocd --cluster=pod --user=argocd --namespace argocd
 	kubectl config use-context pod
-
-sync:
-	argocd --kube-context argocd app sync argocd --local k/argocd --assumeYes --prune
-	argocd --kube-context argocd app wait argocd
-	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
-	argocd --kube-context argocd app wait traefik
-	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
-	argocd --kube-context argocd app wait loft
-	argocd --kube-context argocd app sync vault --local k/vault --assumeYes --prune
-	-kubectl --context pod wait -n vault -l statefulset.kubernetes.io/pod-name=vault-0 --for=condition=ContainersReady pod
-	-$(MAKE) vault-restore
-	-$(MAKE) vault-unseal
-	argocd --kube-context argocd app wait vault
-	argocd --kube-context argocd app sync site --local k/site --assumeYes --prune
-	argocd --kube-context argocd app wait site
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
