--- a/k/kuma-application.yaml
+++ b/k/kuma-application.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: vc1-kuma-global
+  name: kuma
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/defn/dev
-    path: k/vc1-kuma-global
+    path: k/kuma
     targetRevision: main
   destination:
     namespace: default
-    name: vc1
+    name: in-cluster
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
