--- a/k/kuma/kustomization.yaml
+++ b/k/kuma/kustomization.yaml
@@ -3,6 +3,7 @@ namespace: kuma
 helmCharts:
 - releaseName: kuma
   name: kuma
+  namespace: kuma
   version: 1.7.0
   repo: https://kumahq.github.io/charts
   valuesInline:
