--- a/k/kong-appplication.yaml
+++ b/k/kong-appplication.yaml
@@ -15,3 +15,9 @@ spec:
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+  ignoreDifferences:
+  - kind: Deployment
+    group: apps
+    name: kong-kong
+    jsonPointers:
+      - /spec/template/spec/tolerations
