--- a/Makefile.common
+++ b/Makefile.common
@@ -113,20 +113,20 @@ cluster-inner:
 	-k3d cluster delete
 	k3d cluster create --config k3d.yaml \
 		--registry-use registry \
-		-p "80:30080@loadbalancer" \
-		-p "443:30443@loadbalancer" \
-		-p "8200:30820@loadbalancer" \
-		-p "600:30600@loadbalancer" \
-		-p "601:30601@loadbalancer" \
-		-p "602:30602@loadbalancer" \
-		-p "603:30603@loadbalancer" \
-		-p "604:30604@loadbalancer" \
-		-p "605:30605@loadbalancer" \
-		-p "606:30606@loadbalancer" \
-		-p "607:30607@loadbalancer" \
-		-p "608:30608@loadbalancer" \
-		-p "609:30609@loadbalancer" \
-		-p "5685:5685@loadbalancer" \
+		-p "80:8000@server:0" \
+		-p "443:8443@server:0" \
+		-p "8200:8200@server:0" \
+		-p "600:8600@server:0" \
+		-p "601:8601@server:0" \
+		-p "602:8602@server:0" \
+		-p "603:8603@server:0" \
+		-p "604:8604@server:0" \
+		-p "605:8605@server:0" \
+		-p "606:8606@server:0" \
+		-p "607:8607@server:0" \
+		-p "608:8608@server:0" \
+		-p "609:8609@server:0" \
+		-p "5685:5685@server:0" \
 		-p "10001:10001@server:0" \
 		-p "10002:10002@server:0" \
 		-p "10003:10003@server:0" \
