service listens on port 8000, 8443

--- a/k/traefik/kustomization.yaml
+++ b/k/traefik/kustomization.yaml
@@ -102,6 +102,15 @@ patchesStrategicMerge:
         name: traefik
       spec:
         ports:
+        - $patch: replace
+        - name: web
+          port: 8000
+          protocol: TCP
+          targetPort: web
+        - name: websecure
+          port: 8443
+          protocol: TCP
+          targetPort: websecure
         - name: https8200
           port: 8200
           protocol: TCP
