--- a/k/kong/ns.yaml
+++ b/k/kong/ns.yaml
@@ -1,6 +1,6 @@
-apiVersion": v1
+apiVersion: v1
 kind: Namespace
 metadata:
   name: kong
   labels:
-    kuma.io/sidecar-injection: true
+    kuma.io/sidecar-injection: "enabled"
