--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -15,3 +15,14 @@ helmCharts:
 
 resources:
 - ns.yaml
+
+patchesJSON6902:
+- target:
+    group: apps
+    version: v1
+    kind: Deployment
+    name: kong-kong
+  patch: |-
+    - op: add
+      path: /spec/template/spec/annotations/kuma.io~1mesh
+      value: demo
