--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -16,13 +16,15 @@ helmCharts:
 resources:
 - ns.yaml
 
-patchesJSON6902:
-- target:
-    group: apps
-    version: v1
-    kind: Deployment
+patchesStrategicMerge:
+- |-
+  apiVersion: apps/v1
+  kind: Deployment
+  metadata:
     name: kong-kong
-  patch: |-
-    - op: add
-      path: /spec/template/spec/annotations/kuma.io~1mesh
-      value: demo
+    namespace: kong
+  spec:
+    template:
+      spec:
+        annotations:
+          kuma.io/mesh: mesh
