--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -26,5 +26,6 @@ patchesStrategicMerge:
   spec:
     template:
       spec:
-        annotations:
-          kuma.io/mesh: mesh
+        metadata:
+          annotations:
+            kuma.io/mesh: mesh
