--- a/k/vc1-kong/kustomization.yaml
+++ b/k/vc1-kong/kustomization.yaml
@@ -27,4 +27,4 @@ patchesStrategicMerge:
     template:
       metadata:
         annotations:
-          kuma.io/mesh: mesh
+          kuma.io/mesh: demo
