let kuma handle the service

--- a/k/vc1-kuma-demo/ingress.yaml
+++ b/k/vc1-kuma-demo/ingress.yaml
@@ -21,6 +21,8 @@ kind: Service
 metadata:
   name: kuma-demo
   namespace: default
+  annotations:
+    ingress.kubernetes.io/service-upstream: "true"
 spec:
   type: ExternalName
   externalName: demo-app.demo1.svc.5000.mesh
