--- a/k/vc1-kuma-demo/main.yaml
+++ b/k/vc1-kuma-demo/main.yaml
@@ -1,18 +1,53 @@
-apiVersion: kuma.io/v1alpha1
-kind: Mesh
+apiVersion: v1
+kind: Namespace
 metadata:
-  name: demo
+  name: demo2
+  labels:
+    kuma.io/sidecar-injection: enabled
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: demo-app-v2
+  namespace: demo2
 spec:
-  mtls:
-    enabledBackend: ca-1
-    backends:
-      - name: ca-1
-        type: builtin
-        mode: PERMISSIVE
-        dpCert:
-          rotation:
-            expiration: 1d
-        conf:
-          caCert:
-            RSAbits: 2048
-            expiration: 10y
+  selector:
+    matchLabels:
+      app: demo-app
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: demo-app
+        version: v1
+      annotations:
+        kuma.io/mesh: demo
+    spec:
+      containers:
+        - name: demo-app
+          image: "kumahq/kuma-demo"
+          env:
+            - name: REDIS_HOST
+              value: "redis_demo2_svc_6379.mesh"
+            - name: REDIS_PORT
+              value: "80"
+            - name: APP_VERSION
+              value: "1.0"
+            - name: APP_COLOR
+              value: "#5da36f"
+          ports:
+            - name: http
+              containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: demo-app
+  namespace: demo2
+spec:
+  selector:
+    app: demo-app
+  ports:
+  - protocol: TCP
+    appProtocol: http
+    port: 5000
