fix vc3 redis mesh

--- a/k/vc3-kuma-demo/main.yaml
+++ b/k/vc3-kuma-demo/main.yaml
@@ -67,7 +67,7 @@ spec:
       labels:
         app: redis
       annotations:
-        kuma.io/mesh: demo
+        kuma.io/mesh: demom
     spec:
       containers:
         - name: redis
