--- a/k/vc0-kuma-global-application.yaml
+++ b/k/vc0-kuma-global-application.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kuma
+  name: vc0-kuma-global
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/defn/dev
-    path: k/kuma
+    path: k/vc0-kuma-global
     targetRevision: main
   destination:
     namespace: kuma
-    name: in-cluster
+    name: vc0
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
