--- a/k/vc1/ingress.yaml
+++ b/k/vc1/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ts-v1-kong
+  name: ts-vc1-kong
   namespace: vc1
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "true"
