--- a/k/vc3/ingress.yaml
+++ b/k/vc3/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ts-v3-kuma-demo-app
+  name: ts-vc3-kuma-demo-app
   namespace: vc3
   annotations:
     traefik.ingress.kubernetes.io/router.tls: "true"
