--- a/Makefile.common
+++ b/Makefile.common
@@ -35,8 +35,10 @@ init-dev:
 	kubectl --context argocd apply -f k/argocd-application.yaml
 	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
 	kubectl --context argocd apply -f k/traefik-application.yaml
-	kubectl --context argocd apply -f k/loft-application.yaml
 	kubectl --context argocd apply -f k/vault-application.yaml
+	kubectl --context argocd apply -f k/loft-application.yaml
+	kubectl --context argocd apply -f k/vc0-application.yaml
+	kubectl --context argocd apply -f k/vc0-kuma-global-application.yaml
 	-$(MAKE) sync
 
 sync:
@@ -46,6 +48,10 @@ sync:
 	argocd --kube-context argocd app wait traefik
 	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
 	argocd --kube-context argocd app wait loft
+	argocd --kube-context argocd app sync vc0 --local k/vc0 --assumeYes --prune
+	argocd --kube-context argocd app wait vc0
+	argocd --kube-context argocd app sync vc0-kuma-global --local k/vc0-kuma-global --assumeYes --prune
+	argocd --kube-context argocd app wait vc0-kuma-global
 	argocd --kube-context argocd app sync vault --local k/vault --assumeYes --prune
 	-kubectl --context pod wait -n vault -l statefulset.kubernetes.io/pod-name=vault-0 --for=condition=ContainersReady pod
 	-$(MAKE) vault-restore
