--- a/Makefile.common
+++ b/Makefile.common
@@ -49,7 +49,10 @@ sync:
 	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
 	argocd --kube-context argocd app wait loft
 	argocd --kube-context argocd app sync vc0 --local k/vc0 --assumeYes --prune
+	while true; do if kubectl --context pod wait -n vc0 -l statefulset.kubernetes.io/pod-name=vc0-0 --for=condition=ContainersReady pod; then break; fi; sleep 1; done
 	argocd --kube-context argocd app wait vc0
+	vc0 get ns
+	~/bin/e env KUBECONFIG=$$KUBECONFIG_ALL argocd cluster add loft-vcluster_vc0_vc0_loft-cluster --name vc0 --yes
 	argocd --kube-context argocd app sync vc0-kuma-global --local k/vc0-kuma-global --assumeYes --prune
 	argocd --kube-context argocd app wait vc0-kuma-global
 	argocd --kube-context argocd app sync vault --local k/vault --assumeYes --prune
