--- a/.env
+++ b/.env
@@ -1,25 +1,19 @@
 ARGO=3.3.8
-ARGOCD=2.4.3
+ARGOCD=2.4.4
 ASDF=0.10.1
+ASDFX=0.10.2
 AWSVAULT=6.6.0
-BOUNDARY=0.8.1
-BKCLI=1.2.0
-BUILDKITE=3.35.2
-CDKTF=0.11.1
-CILIUM=0.11.1
-CLOUDFLARED=2022.7.0
-CONSUL=1.12.2
+CDKTF=0.11.2
+CILIUM=0.11.6
+CLOUDFLARED=2022.7.1
 CREDENTIAL_PASS=0.6.4
 CUE=0.4.3
-DIFFT=0.28.0
-DOCTL=1.76.2
+DIFFT=0.30.0
 EARTHLY=0.6.17
-FLYCTL=0.0.332
-GH=2.9.0
+GH=2.13.0
 HELM=3.9.0
-HLB=0.4.0
 HOF=0.6.2
-HUBBLE=0.9.0
+HUBBLE=0.10.0
 JLESS=0.8.0
 K3D=5.4.3
 K3SUP=0.12.0
@@ -28,21 +22,18 @@ KREW=0.4.3
 KUBECTL=1.24.2
 KUMA=1.7.0
 KUSTOMIZE=4.5.5
-LINKERD=edge-22.4.1
 LITESTREAM=0.3.8
 LOFT=2.2.1
-NODEJS=16.15.1
-NPM=8.13.1
+NODEJS=16.16.0
+NPM=8.13.2
 POWERLINE=1.22.1
 PYTHON=3.10.5
-REDIS=7.0.2
 SHELLCHECK=0.8.0
 SHFMT=3.5.1
 SKAFFOLD=1.38.0
-STEAMPIPE=0.14.6
-STEP=0.20.0
+STEAMPIPE=0.15.0
+STEP=0.21.0
 SWITCH=0.7.1
-TELEPORT=9.2.1
 TERRAFORM=1.2.4
 TILT=0.30.4
 VAULT=1.11.0
