--- a/Makefile.common
+++ b/Makefile.common
@@ -11,8 +11,11 @@ dummy:
 		bash -c "ip link add dummy0 type dummy; ip addr add $(dummy_ip)/32 dev dummy0; ip link set dev dummy0 up"
 	for ip in $(dummy_ip); do sudo ifconfig lo0 alias "$$ip" netmask 255.255.255.255; done
 
-registry:
+cache:
+	-docker rm -f earthly-buildkitd
 	-docker rm -f k3d-registry k3d-docker-io
+	-docker volume rm earthly-cache
+	-docker system prune -f
 	-k3d registry create registry --port 0.0.0.0:5000
 	-k3d registry create docker-io --proxy-remote-url https://registry-1.docker.io --port 0.0.0.0:5001
 
