--- a/Makefile.common
+++ b/Makefile.common
@@ -16,6 +16,9 @@ cache:
 	-docker rm -f k3d-registry k3d-docker-io
 	-docker volume rm earthly-cache
 	-docker system prune -f
+	$(MAKE) registry
+
+registry:
 	-k3d registry create registry --port 0.0.0.0:5000
 	-k3d registry create docker-io --proxy-remote-url https://registry-1.docker.io --port 0.0.0.0:5001
 
