dont rely on storing vault tokens

--- a/Makefile.common
+++ b/Makefile.common
@@ -168,10 +168,10 @@ vault-unseal:
 	pass Unseal_Key_5 | curl -sSL -X PUT -d @<(jq -nrR 'inputs|{key:.}|@json') http://vault.vault.svc:8200/v1/sys/unseal
 
 vault-login:
-	@pass Initial_Root_Token | env VAULT_ADDR=http://vault.vault.svc:8200 vault login -
+	@env VAULT_TOKEN="$$(pass Initial_Root_Token)" VAULT_ADDR=http://vault.vault.svc:8200 vault login -
 
 vault-seal:
-	-env VAULT_ADDR=http://vault.vault.svc:8200 vault operator seal
+	-env VAULT_TOKEN="$$(pass Initial_Root_Token)" VAULT_ADDR=http://vault.vault.svc:8200 vault operator seal
 	rm -f ~/.vault-token
 
 down:
