--- a/Makefile.common
+++ b/Makefile.common
@@ -37,10 +37,10 @@ init:
 
 init-dev:
 	-kubectl --context pod create namespace argocd
-	kubectl --context argocd apply -f k/argocd-bootstrap.yaml
+	kustomize build --enable-helm k/argocd | kubectl --context argocd apply -f -
 	kubectl --context argocd rollout status deployment argocd-server --watch
 	kubectl --context argocd apply -f k/argocd-application.yaml
-	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
+	kubectl --context argocd apply -f k/argo-events-application.yaml
 	kubectl --context argocd apply -f k/traefik-application.yaml
 	kubectl --context argocd apply -f k/vault-application.yaml
 	kubectl --context argocd apply -f k/loft-application.yaml
@@ -49,8 +49,11 @@ init-dev:
 	-$(MAKE) sync
 
 sync:
+	argocd login --insecure argocd-server.argocd.svc --username admin --password "$$(kubectl --context argocd get -o json secret argocd-initial-admin-secret | jq -r '.data.password | @base64d')"
 	argocd --kube-context argocd app sync argocd --local k/argocd --assumeYes --prune
 	argocd --kube-context argocd app wait argocd
+	argocd --kube-context argocd app sync argo-events --local k/argo-events --assumeYes --prune
+	argocd --kube-context argocd app wait argo-events
 	argocd --kube-context argocd app sync traefik --local k/traefik --assumeYes --prune
 	argocd --kube-context argocd app wait traefik
 	argocd --kube-context argocd app sync loft --local k/loft --assumeYes --prune
@@ -61,7 +64,7 @@ sync:
 	-$(MAKE) vault-restore
 	-$(MAKE) vault-unseal
 	argocd --kube-context argocd app wait vault
-	loft login https://loft.loft.svc.cluster.local --insecure --access-key admin	
+	loft login https://loft.loft.svc.cluster.local --insecure --access-key admin
 	argocd --kube-context argocd app sync vc0 --local k/vc0 --assumeYes --prune
 	while true; do if kubectl --context pod wait -n vc0 -l statefulset.kubernetes.io/pod-name=vc0-0 --for=condition=ContainersReady pod; then break; fi; sleep 1; done
 	argocd --kube-context argocd app wait vc0
